<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tituloNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="30dp"
            android:text="@string/cabeceraNombre"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/imageFoto"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/tituloVarios"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:scaleType="center"
            android:src="@drawable/contact" />

        <!-- - Bloque Nombre y apellido -->

        <EditText
            android:id="@+id/textoNombre"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignLeft="@+id/tituloNombre"
            android:layout_below="@+id/tituloNombre"
            android:ems="10"
            android:hint="@string/cabeceraNombre" />

        <EditText
            android:id="@+id/textoApellido1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignLeft="@+id/textoNombre"
            android:layout_below="@+id/textoNombre"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:hint="@string/cabeceraApellidos" />

        <!-- - Bloque Otros datos personales -->

        <View
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@+id/tituloVarios"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/darker_gray" />

        <!-- - Bloque datos académicos -->

        <View
            android:id="@+id/view3"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@+id/view2"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tituloSexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textoApellido1"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:text="@string/cabeceraSexo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/radioSexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tituloSexo"
            android:layout_marginLeft="32dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioHombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/hombre" />

            <RadioButton
                android:id="@+id/radioMujer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mujer" />
        </RadioGroup>

        <TextView
            android:id="@+id/cabeceraFechaNacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioSexo"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="30dp"
            android:text="@string/cabeceraFechaNacimiento"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/textoFechaNacimiento"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/cabeceraFechaNacimiento"
            android:layout_marginLeft="32dp"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/cabeceraFechaNacimiento" />

        <TextView
            android:id="@+id/cabeceraContrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textoFechaNacimiento"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="20dp"
            android:text="@string/cabeceraContrasena"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/textoContrasena"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/cabeceraContrasena"
            android:layout_marginLeft="32dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="****" />

        <TextView
            android:id="@+id/cabeceraNotificacionMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textoContrasena"
            android:layout_marginLeft="32dp"
            android:text="@string/cabeceraNotificacionMail"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Switch
            android:id="@+id/switchMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textoContrasena"
            android:layout_alignRight="@+id/textoApellido1"
            android:checked="true"/>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="75dp"
            android:clickable="true"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/task" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="75dp"
            android:clickable="true"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/add" />

    </RelativeLayout>

</ScrollView>